--- a/style.css
+++ b/style.css
@@ -129,6 +129,7 @@ header nav ul {
 header nav ul li {
     float: left;
     list-style: none;
+    padding: 0 8px;
 }
 
 header nav ul li a {
@@ -156,7 +157,7 @@ header .nav-login form input {
     margin-right: 10px;
     border: none;
     background-color: #ccc;
-    font-family: arial;
+    font-family: serif;
     font-size: 14px;
     color: #111;
     line-height: 30px;
@@ -241,4 +242,70 @@ header .nav-login a {
 
 .signup-form button:hover {
     background-color: #111;
+}
+
+.account-form {
+    width: 400px;
+    margin: 0 auto;
+    padding-top: 30px;
+}
+
+.account-form input {
+    width: 90%;
+    margin-bottom: 4px;
+    border: none;
+    background-color: #fff;
+    font-family: arial;
+    font-size: 16px;
+    color: #111;
+}
+
+.account-form button {
+    display: block;
+    margin: 0 auto;
+    color: white;
+    width: 30%;
+    height: 40px;
+    border: none;
+    background-color: #222;
+    font-family: arial;
+    font-size: 16px;
+    cursor: pointer;
+}
+
+.account-form button:hover {
+    background-color: #111;
+}
+
+/* account.php */
+
+.slider {
+    -webkit-appearance: none;
+    width: 100%;
+    height: 25px;
+    background: #d3d3d3;
+    outline: none;
+    opacity: 0.7;
+    -webkit-transition: .2s;
+    transition: opacity .2s;
+}
+
+.slider:hover {
+    opacity: 1;
+}
+
+.slider::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    appearance: none;
+    width: 25px;
+    height: 25px;
+    background: #4CAF50;
+    cursor: pointer;
+}
+
+.slider::-moz-range-thumb {
+    width: 25px;
+    height: 25px;
+    background: #4CAF50;
+    cursor: pointer;
 }
